--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
 .App {
+ align-items: center;
   text-align: center;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-repeat: no-repeat;
   display: flex;
-  flex-direction: column;
+  background-size: cover;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Poppins', sans-serif;
   align-items: center;
+  background-color: grey;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+/* .top {
+  font-weight: bolder;
+  font-size: 30px;
+  color: rgb(26, 7, 7);
+  font-weight: bolder;
+  } */
+.withimg {
+  background-color: rgba(237, 245, 236, 0.419);
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-left: 20px;
+  object-fit: cover;
+}
+img {
+  width: 200px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin: 8px;
+  object-fit: cover;
+}
+
+ .container {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  float: center;
+  margin: 0px;
+  padding: 10px;
+  background-color: grey; 
+} 
+.para {
+  text-align: left;
+  margin-left: 30px;
+  font-size: 20px;
+  max-width: 400px;
+  color: rgb(19, 1, 1);
+ 
+}
+span {
+  display: block;
+  padding: 30px;
+}
+
+span {
+  margin: 20px;
   color: white;
+  border-radius: 6px;
+  text-align: center;
+  padding: 2px 0 4px 0;
+}
+span:hover {
+  transform: scaleX(1.08);
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  border-radius: 4px;
+  text-align: center;
+  align-content: center;
+  display: flex;
+  width: 80px;
+  margin-left: 20px;
+  text-decoration: none;
+  overflow: hidden;
+}
+a:hover {
+  margin-left: 30px;
+  transform: scaleX(1.2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  font-size: 40px;
+  padding: 30px;
+  text-align: center;
+ }
+.head2 {
+  background-color:grey;
 }
