--- a/src/App.css
+++ b/src/App.css
@@ -1,95 +1,68 @@
-.App {
- align-items: center;
-  text-align: center;
-  
-}
-body {
-  background-repeat: no-repeat;
-  display: flex;
-  background-size: cover;
-  padding: 0px;
-  margin: 0px;
-  font-family: 'Poppins', sans-serif;
-  align-items: center;
-  background-color: grey;
-  align-content: center;
-  justify-content: center;
-}
-
-/* .top {
-  font-weight: bolder;
-  font-size: 30px;
-  color: rgb(26, 7, 7);
-  font-weight: bolder;
-  } */
-.withimg {
-  background-color: rgba(237, 245, 236, 0.419);
-  border-radius: 10px;
-  margin-top: 30px;
-  margin-left: 20px;
-  object-fit: cover;
-}
-img {
-  width: 200px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  margin: 8px;
-  object-fit: cover;
-}
-
- .container {
-  display: flex;
-  align-items: center;
-  align-content: center;
-  float: center;
-  margin: 0px;
-  padding: 10px;
-  background-color: grey; 
-} 
-.para {
-  text-align: left;
-  margin-left: 30px;
-  font-size: 20px;
-  max-width: 400px;
-  color: rgb(19, 1, 1);
+ .App {
  
-}
-span {
-  display: block;
-  padding: 30px;
+  text-align: center; 
+  font-size: 32px;
+  margin-top: 30px;
+   }   
+
+  .body {
+    margin: 30px;
+    font-family: "Poppins", sansserif;
+    background-color: black;
+    
+  }
+.user-name {
+  font-family: "Poppins", sansserif;
 }
 
-span {
-  margin: 20px;
-  color: white;
-  border-radius: 6px;
-  text-align: center;
-  padding: 2px 0 4px 0;
-}
-span:hover {
-  transform: scaleX(1.08);
+.movie-container {
+   background-color:white;
+  width:300px;
 }
 
-a {
-  border-radius: 4px;
-  text-align: center;
-  align-content: center;
+.movie-poster {
+  align-items: center;
+  height:350px;
+  width:300px;
+  object-fit: cover;
+}
+
+.movie-specs {
   display: flex;
-  width: 80px;
-  margin-left: 20px;
-  text-decoration: none;
-  overflow: hidden;
-}
-a:hover {
-  margin-left: 30px;
-  transform: scaleX(1.2);
+  align-content: space-around;
+    justify-content: space-between;
+    margin-top: 8px;
 }
 
-header {
-  font-size: 40px;
-  padding: 30px;
-  text-align: center;
- }
-.head2 {
-  background-color:grey;
+.movie-rating {
+  font-size: 16px;
+}
+
+.movie-name {
+  font-size: 20px;
+  margin: 0;
+  font-weight: bolder;
+}
+
+.movie-summary {
+  margin-top: 0px;
+  font-size: 14px;
+  justify-content:safe;
+}
+
+.movie-list {
+  display: flex;
+  gap: 20px;
+  margin: 10px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.counter-container {
+  display: flex;
+  gap:10px;
+}
+
+.like-unlike {
+  font-size: 14px;
 }
