--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
  .App {
  
-  text-align: center; 
-  font-size: 32px;
+  /* text-align: center;  */
+  font-size: 20px;
   margin-top: 30px;
    }   
 
@@ -16,8 +16,9 @@
 }
 
 .movie-container {
-   background-color:white;
+   background-color:rgb(247, 255, 247);
   width:300px;
+  /* height: min-content; */
 }
 
 .movie-poster {
@@ -36,17 +37,20 @@
 
 .movie-rating {
   font-size: 16px;
+  margin-right: 10px;
+  margin-top: 5px;
 }
 
 .movie-name {
-  font-size: 20px;
+  font-size: 26px;
   margin: 0;
   font-weight: bolder;
+  max-width: 75%;
 }
 
 .movie-summary {
   margin-top: 0px;
-  font-size: 14px;
+  font-size: 18px;
   justify-content:safe;
 }
 
@@ -64,5 +68,33 @@
 }
 
 .like-unlike {
-  font-size: 14px;
+  font-size: 16px;
+  margin:5px;
+}
+
+.movie-show-button {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.add-color-form {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  width: 500px;
+  /* height:100px; */
+}
+
+.add-movie-form {
+  margin: 20px;
+  display: flex;
+  gap:10px;
+  flex-direction:column;
+  
+}
+
+.add-button {
+  height: 50px;
+  font-size: 50px;
+  font-weight: bolder;
 }
