--- a/src/App.css
+++ b/src/App.css
@@ -102,8 +102,21 @@
 nav {
   display: flex;
   font-size: 32px;
-  gap: 24px;
+  gap: 20px;
   margin: 24px;
   font-weight: bold;
  
+}
+
+.not-found-container {
+  font-size: 30px;
+  color: teal;
+  text-align: center;
+  font-weight: bolder;
+  
+}
+
+.not-found-image {
+  width:100%;
+  object-fit: contain;
 }
